# core1990_interlaken

./: .gitignore  README.md
WupperCodeGenScripts/: build-doc.sh  build-firmware.sh  build-software.sh  registers-1.0.yaml
documentation/: benchmark.tex  bibliography.tex  customizing.tex  design.tex  example_application.tex  introduction.tex  obtaining.tex  registermap.tex  registermap.tex.template  registers-1.0.html  registers.html.template  simulation.tex  supportedtools.tex  testing.tex  titlepage.tex  versionhistory.tex  wupper.tex  xilinx_core.tex
documentation/et_template/: template.tex
documentation/example_application/: appendix.tex  conclusion.tex  internship-wupper.tex  introduction.tex  reference.tex  titlepage.tex  verification.tex  wupper.tex
documentation/example_application/et_template/: template.tex
documentation/figures/: wupper_structure.odg  wupper_to_wishbone.tex
firmware/constraints/: Core1990_Constraints.xdc  pcie_dma_top_VC709.xdc
firmware/scripts/: do_implementation_VC709.tcl  simulation.tcl  vivado_import_Core1990Verification_vUSP.tcl  vivado_import_virtex7.tcl  vivado_import_virtex709.tcl  vivado_import_virtexUltrascalePlus.tcl
firmware/scripts/.Xil/: clk_40MHz_propImpl.xdc
firmware/scripts/filesets/: UVVM_fileset.tcl  application_fileset.tcl  housekeeping_fileset.tcl  interlaken_fileset.tcl  interlaken_oc_fileset.tcl  wb_fileset.tcl  wupper_fileset.tcl  wupper_oc_fileset.tcl
firmware/scripts/helper/: clear_filesets.tcl  do_implementation_finish.tcl  do_implementation_post.tcl  do_implementation_pre.tcl  questa_import_generic.tcl  sigasi_import_generic.tcl  vivado_import_generic.tcl
firmware/scripts/interlaken_top/: FLX128_import_vivado.tcl  FLX709_import_vivado.tcl  WUPPER_INTERLAKEN_SIGASI.mpf  (+10 more)
firmware/simulation/: Core1990_Test_tb.vhd  deframing_burst.vhd  descrambler_tb.vhd  encoder_tb.vhd  interlaken-interface.do  interlaken_interface_tb.vhd  interlaken_receiver_tb.vhd  pcie_x8_gen3_3_0_stub.vhdl  scrambler_tb.vhd  vivado.jou  vivado_10291.backup.jou  vivado_pid17517.str  wupper_interlaken_top_tb.vhdl
firmware/sources/: interlaken_interface.vhd
projects/core1990_interlaken_verification/: Core199_verification_behav.wcfg  core1990_interlaken_verification.xpr
scripts/: vivado_import_virtex7.tcl  vivado_import_virtexUltrascalePlus.tcl
simulation/: decoder_tb.vhd  deframing_meta.vhd  interlaken_transmitter_tb.vhd
software/: README.md
software/DFDebug/: CMakeLists.txt
software/drivers/: CMakeLists.txt  README.txt
software/drivers/cmem_rcc/: cmem_rcc.h  cmem_rcc_common.h  cmem_rcc_drv.h
software/drivers/drivers/: cmem_rcc.ko  wupper.ko
software/drivers/scripts/: drivers_wupper  drivers_wupper_local
software/drivers/src/: .cmem_rcc.ko.cmd  .cmem_rcc.mod.o.cmd  .cmem_rcc.o.cmd  .wupper.ko.cmd  .wupper.mod.o.cmd  .wupper.o.cmd  Makefile  cmem_rcc.c  cmem_rcc.mod.c  modules.order  wupper.c  wupper.mod.c
software/drivers/src/.tmp_versions/: cmem_rcc.mod  wupper.mod
software/drivers/src/lib/: cmem_rcc_lib.cpp
software/drivers/wupper/: wupper_common.h
software/rcc_error/: CMakeLists.txt
software/regmap/: CMakeLists.txt  README.md
software/regmap/regmap/: regmap-common.h  regmap-struct.h  regmap-symbol.h  regmap.h
software/regmap/src/: regmap-struct.h.template  regmap-symbol.c  regmap-symbol.c.template  regmap-symbol.h.template
software/wupper_gui/: CMakeLists.txt
software/wupper_gui/include/: chaintest-thread.h  throughput-thread.h  wupper_gui.h
software/wupper_gui/src/: Wupper_gui.ui  chaintest-thread.cpp  main.cpp  qcustomplot.cpp  throughput-thread.cpp  wupper_gui.cpp
software/wupper_tools/: CMakeLists.txt  README.txt  version.h
software/wupper_tools/src/: Wupper.cpp  WupperException.cpp  Wupper_scope.cpp  wupper-chaintest.cpp  wupper-config.cpp  wupper-dma-stat.cpp  wupper-dma-test.cpp  wupper-dma-transfer.cpp  wupper-dump-blocks.cpp  wupper-i2c.cpp  wupper-info.cpp  wupper-init.cpp  wupper-interlaken-transfer.cpp  wupper-irq-test.cpp  wupper-reset.cpp  wupper-throughput.cpp  wupper-wishbone.cpp
software/wupper_tools/wupper/: Wupper.h  WupperException.h
software/wuppercodegen/: CMakeLists.txt  DESCRIPTION.rst  MANIFEST.in  README.rst  TODO  dependencies.txt  setup.py
sources/: interlaken_interface.vhd
sources/Wishbone/: wb_intercon.vhd  wb_memory.vhd  xwb_crossbar.vhd
sources/application/: application.vhd
sources/crc/: crc-24.vhd  crc-32.vhd
sources/ip_cores/: Transceiver_10g_64b67b_sim_netlist.vhdl  interlaken_0.xci
sources/pcie/: dma_control.vhd  intr_ctrl.vhd  pcie_ep_wrap.vhd  pcie_slow_clock.vhd
sources/receiver/: decoder.vhd  deframing_burst.vhd  deframing_meta.vhd  descrambler.vhd  interlaken_receiver.vhd
sources/shared/: dna.vhd  housekeeping.vhd
sources/test/: Core1990_verification.vhd  pipeline.vhd
sources/transmitter/: encoder.vhd  framing_burst.vhd  framing_meta.vhd  interlaken_transmitter.vhd  scrambler.vhd
(+565 files in other folders)
